修改图片资源文件，增加翻译

--- a/src/stylesheets/themes/github-dark-orange/beaudar.scss
+++ b/src/stylesheets/themes/github-dark-orange/beaudar.scss
@@ -1,5 +1,5 @@
 @import "./variables";
-@import "../../utterances";
+@import "../../beaudar";
 @import "./syntax";
 @import "./button.scss";
 @import "./glow.scss";
