修改 用户添加的表情符号 在较小屏幕显示不完整

--- a/src/stylesheets/reactions.scss
+++ b/src/stylesheets/reactions.scss
@@ -1,21 +1,15 @@
 .reaction-list {
-  display: flex;
-  flex-wrap: nowrap;
-  margin-top: -1px;
-  margin-bottom: -1px;
-  margin-left: -1px;
-  border-right: $border;
-  overflow-x: hidden;
-  overflow-y: visible;
-  > .reaction-button:last-child {
-    border-right: none!important;
+  border-right: 0;
+
+  @media screen and (min-width: 720px) {
+    border-right: $border;
   }
 }
 
-.reaction-list > .reaction-button {
+.reaction-list>.reaction-button {
   font-weight: normal;
   padding: $spacer-2 $spacer-3;
-  border-radius: 0!important;
+  border: 0;
 
   &[reaction-count="0"] {
     display: none;
@@ -35,6 +29,7 @@
     color: $text-gray;
     white-space: nowrap;
     transition: opacity 0.3s ease-in-out;
+
     &:hover {
       color: $text-blue;
     }
@@ -57,18 +52,18 @@
 
   .BtnGroup {
     margin: 0 auto;
+
     &:first-of-type {
       margin-top: $spacer-6;
     }
   }
 
   .reaction-button {
-    border: none;
-    border-radius: 0!important;
+    border: 0;
     transition: transform .15s cubic-bezier(.2, 0, .13, 2);
-    background: transparent!important;
+    background: transparent !important;
     white-space: nowrap;
-    
+
     &:hover {
       transform: scale(1.2);
       color: $text-blue !important;
@@ -86,11 +81,11 @@
   background-color: $bg-white;
   pointer-events: none;
 
-  .reaction-button + & {
+  .reaction-button+& {
     display: none;
   }
 
-  .reaction-button:hover + & {
+  .reaction-button:hover+& {
     display: block;
   }
 }
