--- a/src/stylesheets/beaudar.scss
+++ b/src/stylesheets/beaudar.scss
@@ -36,3 +36,9 @@ body {
 textarea[disabled] {
   cursor: not-allowed;
 }
+
+.is-error {
+  margin: 5px;
+  padding: 10px;
+  display: inline-block;
+}
