--- a/src/stylesheets/timeline-comment.scss
+++ b/src/stylesheets/timeline-comment.scss
@@ -33,6 +33,7 @@
 
   .comment-meta {
     padding: 10px $spacer-3;
+    font-size: 12px;
   }
 
   .comment-actions {
@@ -124,6 +125,7 @@
     border-radius: $border-radius;
     font-size: $font-size-small;
     font-weight: $font-weight-semibold;
+    word-break: keep-all;
   }
 
   .avatar {
