添加 current-dark 在 黑夜模式 img filter: brightness(80%)

--- a/src/stylesheets/themes/github-dark-orange/index.scss
+++ b/src/stylesheets/themes/github-dark-orange/index.scss
@@ -9,6 +9,7 @@
 @import "./placeholder.scss";
 @import "./combobox.scss";
 @import "./code.scss";
+@import "../../current-dark";
 
 body {
   background-color: $bg-page;
