[修复] 在更改了主题后，出现错误后点击刷新，主题没有保持的问题 [改善] 加载图标边距

--- a/src/stylesheets/beaudar-loading.scss
+++ b/src/stylesheets/beaudar-loading.scss
@@ -1,6 +1,6 @@
 .beaudarLoading {
   position: relative;
-  margin: 20px auto;
+  margin: 40px auto 60px auto;
   background-color: $gray-200;
   border-radius: 50px;
   width: 100px;
