--- a/src/stylesheets/beaudar.scss
+++ b/src/stylesheets/beaudar.scss
@@ -41,3 +41,9 @@ textarea[disabled] {
 #reload-button {
   float: right;
 }
+
+.ie-container {
+  width: 360px;
+  padding: 40px;
+  margin: auto;
+}
