@import "@primer/css/support/variables/colors"

--- a/src/stylesheets/beaudar.scss
+++ b/src/stylesheets/beaudar.scss
@@ -1,3 +1,4 @@
+@import "@primer/css/support/variables/colors";
 @import "@primer/css/base/index";
 @import "@primer/css/utilities/details";
 @import "@primer/css/utilities/box-shadow";
