--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,3 +1,4 @@
+@import "@primer/css/support/variables/colors";
 @import "@primer/css/base/index";
 @import "@primer/css/buttons/button";
 @import "@primer/css/forms/form-control";
