优化由于 border-radius 导致的问题，修改 ReactionsMenu 的位置

--- a/src/stylesheets/timeline-comment.scss
+++ b/src/stylesheets/timeline-comment.scss
@@ -19,7 +19,8 @@
     min-width: 0px;
     background-color: $bg-white;
     border: $border;
-    border-radius: $border-radius;
+    border-top-right-radius: $border-radius;
+    border-top-left-radius: $border-radius;
   }
 
   .comment-header {
