--- a/src/stylesheets/reactions.scss
+++ b/src/stylesheets/reactions.scss
@@ -24,12 +24,6 @@
   }
 }
 
-.BtnGroup-item {
-  &:first-child {
-    border-bottom-left-radius: 6px;
-  }
-}
-
 .reactions-popover {
   summary {
     margin: -1px 0;
@@ -45,9 +39,23 @@
 
   .Popover {
     margin-top: $spacer-2;
+
+    .Popover-message--top-right {
+      &::before {
+        right: 14px;
+      }
+
+      &::after {
+        right: 15px;
+      }
+    }
   }
 
   .Popover-message {
+    &::before {
+      border-bottom-color: $border-color;
+    }
+
     position: relative;
     padding: $spacer-1;
     display: flex;
@@ -93,6 +101,8 @@
   padding: $spacer-2 $spacer-3;
   background-color: $bg-white;
   pointer-events: none;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
 
   .reaction-button+& {
     display: none;
