解决小屏幕下 登录按钮错位的问题

--- a/src/stylesheets/timeline-comment.scss
+++ b/src/stylesheets/timeline-comment.scss
@@ -121,6 +121,14 @@
       font-size: $font-size-small;
       margin-right: $spacer-1;
     }
+
+    @media screen and (max-width:385px) {
+      flex-direction: column;
+
+      & a.btn {
+        white-space: initial;
+      }
+    }
   }
 
   &.current-user .comment-header {
