--- a/src/stylesheets/themes/github-dark-orange/beaudar.scss
+++ b/src/stylesheets/themes/github-dark-orange/beaudar.scss
@@ -1,12 +1,12 @@
-@import "./variables";
-@import "../../beaudar";
-@import "./syntax";
-@import "./button.scss";
-@import "./glow.scss";
-@import "./heading.scss";
-@import "./comment.scss";
-@import "./selection.scss";
-@import "./placeholder.scss";
-@import "./combobox.scss";
-@import "./code.scss";
-@import "../../current-dark";
+@import './variables';
+@import '../../beaudar';
+@import './syntax';
+@import './button.scss';
+@import './glow.scss';
+@import './heading.scss';
+@import './comment.scss';
+@import './selection.scss';
+@import './placeholder.scss';
+@import './combobox.scss';
+@import './code.scss';
+@import '../../current-dark';
