--- a/src/stylesheets/themes/github-dark-orange/index.scss
+++ b/src/stylesheets/themes/github-dark-orange/index.scss
@@ -1,15 +1,15 @@
-@import "./variables";
-@import "../../index";
-@import "./syntax";
-@import "./button.scss";
-@import "./glow.scss";
-@import "./heading.scss";
-@import "./comment.scss";
-@import "./selection.scss";
-@import "./placeholder.scss";
-@import "./combobox.scss";
-@import "./code.scss";
-@import "../../current-dark";
+@import './variables';
+@import '../../index';
+@import './syntax';
+@import './button.scss';
+@import './glow.scss';
+@import './heading.scss';
+@import './comment.scss';
+@import './selection.scss';
+@import './placeholder.scss';
+@import './combobox.scss';
+@import './code.scss';
+@import '../../current-dark';
 
 body {
   background-color: $bg-page;
