--- a/src/stylesheets/themes/github-dark-orange/selection.scss
+++ b/src/stylesheets/themes/github-dark-orange/selection.scss
@@ -1,15 +1,19 @@
-@import "./variables";
+@import './variables';
 
 @mixin selection($element) {
-  #{$element}::-moz-selection { @content; }
-  #{$element}::selection { @content; }
+  #{$element}::-moz-selection {
+    @content;
+  }
+  #{$element}::selection {
+    @content;
+  }
 }
 
-@include selection("") {
+@include selection('') {
   background: $highlight;
   color: $text-gray-dark !important;
 }
 
-@include selection("img") {
+@include selection('img') {
   background: transparentize($highlight, 0.25);
 }
