--- a/src/stylesheets/themes/github-light/syntax.scss
+++ b/src/stylesheets/themes/github-light/syntax.scss
@@ -1,4 +1,4 @@
-@import "github-syntax-light/lib/github-light";
+@import 'github-syntax-light/lib/github-light';
 
 // adjust syntax highlighting to ensure WCAG AAA rating
 .pl-ent {
