--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,14 +1,14 @@
-@import "@primer/css/support/variables/colors";
-@import "@primer/css/base/index";
-@import "@primer/css/buttons/button";
-@import "@primer/css/forms/form-control";
-@import "@primer/css/forms/form-select";
-@import "@primer/css/forms/form-group";
-@import "@primer/css/forms/input-group";
-@import "@primer/css/markdown/index";
-@import "./util";
-@import "./timeline";
-@import "./timeline-comment";
+@import '@primer/css/support/variables/colors';
+@import '@primer/css/base/index';
+@import '@primer/css/buttons/button';
+@import '@primer/css/forms/form-control';
+@import '@primer/css/forms/form-select';
+@import '@primer/css/forms/form-group';
+@import '@primer/css/forms/input-group';
+@import '@primer/css/markdown/index';
+@import './util';
+@import './timeline';
+@import './timeline-comment';
 
 .timeline {
   width: 100%;
@@ -31,7 +31,7 @@ fieldset {
   padding: 0;
 }
 
-input:not([type=radio]) {
+input:not([type='radio']) {
   margin: $spacer-1 0;
 }
 
