--- a/src/stylesheets/themes/dark-blue/index.scss
+++ b/src/stylesheets/themes/dark-blue/index.scss
@@ -1,5 +1,5 @@
-@import "./variables";
-@import "../../index";
-@import "./syntax";
-@import "./button.scss";
-@import "../../current-dark";
+@import './variables';
+@import '../../index';
+@import './syntax';
+@import './button.scss';
+@import '../../current-dark';
