--- a/src/stylesheets/themes/dark-blue/variables.scss
+++ b/src/stylesheets/themes/dark-blue/variables.scss
@@ -1,15 +1,15 @@
 $gray-000: #181818;
 $gray-100: #222;
 $gray-200: #24292e;
-$gray-300: #1D1F21;
+$gray-300: #1d1f21;
 $gray-400: #586069;
 $gray-600: #7b7b7b;
 $gray-700: #959da5;
-$bg-white: darken(#1E232B, 5%);
+$bg-white: darken(#1e232b, 5%);
 $bg-gray: $bg-white;
 $bg-gray-light: darken($bg-gray, 5%);
-$border-gray: #1D1F21;
-$border-gray-dark: #1D1F21;
+$border-gray: #1d1f21;
+$border-gray-dark: #1d1f21;
 $text-gray: #949494;
 $text-gray-dark: #c0c0c0;
 $text-blue: rgb(65, 131, 196);
