--- a/src/stylesheets/themes/github-dark-orange/combobox.scss
+++ b/src/stylesheets/themes/github-dark-orange/combobox.scss
@@ -1,6 +1,7 @@
-@import "./variables";
+@import './variables';
 
-.form-control, .form-select {
+.form-control,
+.form-select {
   color: $text-gray-dark;
   background-color: $bg-white !important;
   border-radius: 3px;
