--- a/src/stylesheets/themes/github-dark-orange/heading.scss
+++ b/src/stylesheets/themes/github-dark-orange/heading.scss
@@ -1,5 +1,10 @@
-@import "./variables";
+@import './variables';
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   border-color: $line !important;
 }
