--- a/src/stylesheets/themes/github-dark-orange/placeholder.scss
+++ b/src/stylesheets/themes/github-dark-orange/placeholder.scss
@@ -1,11 +1,21 @@
-@import "./variables";
+@import './variables';
 
 @mixin placeholder {
-  ::placeholder { @content; }
-  ::-webkit-input-placeholder { @content; }
-  ::-moz-placeholder { @content; }
-  :-moz-placeholder { @content; }
-  :-ms-input-placeholder { @content; }
+  ::placeholder {
+    @content;
+  }
+  ::-webkit-input-placeholder {
+    @content;
+  }
+  ::-moz-placeholder {
+    @content;
+  }
+  :-moz-placeholder {
+    @content;
+  }
+  :-ms-input-placeholder {
+    @content;
+  }
 }
 
 @include placeholder {
