--- a/src/stylesheets/themes/github-dark/beaudar.scss
+++ b/src/stylesheets/themes/github-dark/beaudar.scss
@@ -1,5 +1,5 @@
-@import "./variables";
-@import "../../beaudar";
-@import "./syntax";
-@import "./button.scss";
-@import "../../current-dark";
+@import './variables';
+@import '../../beaudar';
+@import './syntax';
+@import './button.scss';
+@import '../../current-dark';
