--- a/src/stylesheets/themes/photon-dark/button.scss
+++ b/src/stylesheets/themes/photon-dark/button.scss
@@ -13,7 +13,8 @@
 }
 
 .btn-primary:focus {
-  box-shadow: 0 0 0 1px #0a84ff inset, 0 0 0 1px #0a84ff, 0 0 0 4px rgba(10, 132, 255, 0.3)
+  box-shadow: 0 0 0 1px #0a84ff inset, 0 0 0 1px #0a84ff,
+    0 0 0 4px rgba(10, 132, 255, 0.3);
 }
 
 .btn-primary:disabled {
