feat: 使用 vite 开发、主题载入方式改为使用 css 选择器

--- a/src/stylesheets/zigzag.scss
+++ b/src/stylesheets/zigzag.scss
@@ -1,5 +1,7 @@
+@use 'sass:math';
+
 $zz-height: 16px;
-$zz-halfheight: ($zz-height / 2);
+$zz-halfheight: math.div($zz-height, 2);
 $zz-thickness: 110%; // increase to make the line thicker
 $zz-offset: 4px;
 $zz-background-color: $bg-white;
