feat: 优化表情符号选择的位置

--- a/src/stylesheets/reactions.scss
+++ b/src/stylesheets/reactions.scss
@@ -1,13 +1,10 @@
-.reaction-list {
-  padding: $spacer-3 $spacer-2 0 $spacer-2;
-}
 .reaction-list > .reaction-button {
   font-weight: normal;
   border: $border !important;
   box-shadow: unset;
   padding: 0 $spacer-2;
-  border-radius: $border-radius;
-  margin: 0 $spacer-2 $spacer-3;
+  border-radius: 100px;
+  margin-left: $spacer-2;
   line-height: 26px;
 
   &[reaction-count='0'] {
@@ -44,6 +41,18 @@
 
       &::after {
         right: 15px;
+      }
+    }
+
+    .Popover-message--bottom-left {
+      &::before {
+        border-bottom: none;
+        bottom: -8px;
+        left: 10px;
+      }
+
+      &::after {
+        left: 11px;
       }
     }
   }
