--- a/src/stylesheets/themes/classic-dark/beaudar.scss
+++ b/src/stylesheets/themes/classic-dark/beaudar.scss
@@ -1,4 +1,5 @@
 @import './variables';
 @import '../../beaudar';
-@import './syntax';
-@import './button.scss';
+@import '../../github-syntax-dark/lib/github-dark';
+@import './cover.scss';
+@import '../../current-dark';
