--- a/src/stylesheets/themes/github-dark-orange/beaudar.scss
+++ b/src/stylesheets/themes/github-dark-orange/beaudar.scss
@@ -1,12 +1,5 @@
 @import './variables';
 @import '../../beaudar';
-@import './syntax';
-@import './button.scss';
-@import './glow.scss';
-@import './heading.scss';
-@import './comment.scss';
-@import './selection.scss';
-@import './placeholder.scss';
-@import './combobox.scss';
-@import './code.scss';
+@import '../../github-syntax-dark/lib/github-dark';
+@import './cover.scss';
 @import '../../current-dark';
