--- a/src/stylesheets/themes/icy-dark/index.scss
+++ b/src/stylesheets/themes/icy-dark/index.scss
@@ -1,5 +1,5 @@
 @import './variables';
 @import '../../index';
-@import './syntax';
-@import './button.scss';
+@import '../../github-syntax-dark/lib/github-dark';
+@import './cover.scss';
 @import '../../current-dark';
