--- a/src/stylesheets/@primer/navigation.scss
+++ b/src/stylesheets/@primer/navigation.scss
@@ -1,5 +1,5 @@
 // Outer wrapper
-// stylelint-disable selector-max-type
+
 .tabnav {
   margin-top: 0;
   margin-bottom: $spacer-3;
@@ -8,7 +8,6 @@
 
 .tabnav-tabs {
   display: flex;
-  // stylelint-disable-next-line primer/spacing
   margin-bottom: -1px;
   overflow: auto;
 }
@@ -18,7 +17,7 @@
   flex-shrink: 0;
   padding: $spacer-2 $spacer-3;
   font-size: $h5-size;
-  // stylelint-disable-next-line primer/typography
+
   line-height: 23px;
   color: $text-gray-dark;
   text-decoration: none;
@@ -27,8 +26,8 @@
   border-bottom: 0;
 
   &.selected,
-  &[aria-selected=true],
-  &[aria-current]:not([aria-current=false]) {
+  &[aria-selected='true'],
+  &[aria-current]:not([aria-current='false']) {
     background-color: $bg-white;
     border-color: $border-gray;
     border-radius: $border-radius $border-radius 0 0;
@@ -46,7 +45,7 @@
 
   .octicon {
     margin-right: $spacer-1;
-    // stylelint-disable-next-line primer/colors
+
     color: $gray-400;
   }
 
@@ -62,21 +61,17 @@
 
 .tabnav-extra {
   display: inline-block;
-  // stylelint-disable-next-line primer/spacing
   padding-top: 10px;
-  // stylelint-disable-next-line primer/spacing
   margin-left: 10px;
   font-size: $font-size-small;
   color: $text-gray;
 
   > .octicon {
-    // stylelint-disable-next-line primer/spacing
     margin-right: 2px;
   }
 }
 
 // When tabnav-extra are anchors
-// stylelint-disable-next-line selector-no-qualifying-type
 a.tabnav-extra:hover {
   color: $text-blue;
   text-decoration: none;
