--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -1,4 +1,4 @@
-@import './@primer/css/index.scss';
+@import './@primer/index.scss';
 @import './util';
 @import './timeline';
 @import './timeline-comment';
