--- a/src/stylesheets/@primer/support.scss
+++ b/src/stylesheets/@primer/support.scss
@@ -3,147 +3,147 @@
 
 // Heading sizes - mobile
 // h4-h6 remain the same size on both mobile & desktop
-$h00-size-mobile: 40px;
-$h0-size-mobile: 32px;
-$h1-size-mobile: 26px;
-$h2-size-mobile: 22px;
-$h3-size-mobile: 18px;
+$h00-size-mobile: 40px !default;
+$h0-size-mobile: 32px !default;
+$h1-size-mobile: 26px !default;
+$h2-size-mobile: 22px !default;
+$h3-size-mobile: 18px !default;
 
 // Heading sizes - desktop
-$h00-size: 48px;
-$h0-size: 40px;
-$h1-size: 32px;
-$h2-size: 24px;
-$h3-size: 20px;
-$h4-size: 16px;
-$h5-size: 14px;
-$h6-size: 12px;
+$h00-size: 48px !default;
+$h0-size: 40px !default;
+$h1-size: 32px !default;
+$h2-size: 24px !default;
+$h3-size: 20px !default;
+$h4-size: 16px !default;
+$h5-size: 14px !default;
+$h6-size: 12px !default;
 
-$font-size-small: 12px;
+$font-size-small: 12px !default;
 
 // Font weights
-$font-weight-bold: 600;
-$font-weight-semibold: 500;
-$font-weight-normal: 400;
-$font-weight-light: 300;
+$font-weight-bold: 600 !default;
+$font-weight-semibold: 500 !default;
+$font-weight-normal: 400 !default;
+$font-weight-light: 300 !default;
 
 // Line heights
-$lh-condensed-ultra: 1;
-$lh-condensed: 1.25;
-$lh-default: 1.5;
+$lh-condensed-ultra: 1 !default;
+$lh-condensed: 1.25 !default;
+$lh-default: 1.5 !default;
 
 // Font stacks
 $body-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
-  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji' !default;
 
 // Monospace font stack
-$mono-font: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, monospace;
+$mono-font: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, monospace !default;
 
 // The base body size
-$body-font-size: 14px;
+$body-font-size: 14px !default;
 $body-line-height: $lh-default;
 
 // Black based on same hue as $gray-900
-$black: #1b1f23;
-$white: #fff;
+$black: #1b1f23 !default;
+$white: #fff !default;
 
 //
 //
 // -------- Grays --------
-$gray-000: #fafbfc;
-$gray-100: #f6f8fa;
-$gray-200: #e1e4e8;
-$gray-300: #d1d5da;
-$gray-400: #959da5;
-$gray-500: #6a737d;
-$gray-600: #586069;
-$gray-700: #444d56;
-$gray-800: #2f363d;
-$gray-900: #24292e; // body font color
+$gray-000: #fafbfc !default;
+$gray-100: #f6f8fa !default;
+$gray-200: #e1e4e8 !default;
+$gray-300: #d1d5da !default;
+$gray-400: #959da5 !default;
+$gray-500: #6a737d !default;
+$gray-600: #586069 !default;
+$gray-700: #444d56 !default;
+$gray-800: #2f363d !default;
+$gray-900: #24292e !default; // body font color
 
 // -------- Blue --------
-$blue-000: #f1f8ff;
-$blue-100: #dbedff;
-$blue-200: #c8e1ff;
-$blue-300: #79b8ff;
-$blue-400: #2188ff;
-$blue-500: #0366d6; // Default: Passes AA with #fff
-$blue-600: #005cc5;
-$blue-700: #044289;
-$blue-800: #032f62;
-$blue-900: #05264c; // Passes with 1/2/300 blues
+$blue-000: #f1f8ff !default;
+$blue-100: #dbedff !default;
+$blue-200: #c8e1ff !default;
+$blue-300: #79b8ff !default;
+$blue-400: #2188ff !default;
+$blue-500: #0366d6 !default; // Default: Passes AA with #fff
+$blue-600: #005cc5 !default;
+$blue-700: #044289 !default;
+$blue-800: #032f62 !default;
+$blue-900: #05264c !default; // Passes with 1/2/300 blues
 
 // -------- Green --------
-$green-000: #f0fff4;
-$green-100: #dcffe4;
-$green-200: #bef5cb;
-$green-300: #85e89d;
-$green-400: #34d058;
-$green-500: #28a745; // Default. passes AA Large
-$green-600: #22863a; // Text green, passes AA on #fff
-$green-700: #176f2c;
-$green-800: #165c26;
-$green-900: #144620;
+$green-000: #f0fff4 !default;
+$green-100: #dcffe4 !default;
+$green-200: #bef5cb !default;
+$green-300: #85e89d !default;
+$green-400: #34d058 !default;
+$green-500: #28a745 !default; // Default. passes AA Large
+$green-600: #22863a !default; // Text green, passes AA on #fff
+$green-700: #176f2c !default;
+$green-800: #165c26 !default;
+$green-900: #144620 !default;
 
 // -------- Yellow --------
-$yellow-000: #fffdef;
-$yellow-100: #fffbdd;
-$yellow-200: #fff5b1;
-$yellow-300: #ffea7f;
-$yellow-400: #ffdf5d;
-$yellow-500: #ffd33d;
-$yellow-600: #f9c513;
-$yellow-700: #dbab09;
-$yellow-800: #b08800;
-$yellow-900: #735c0f;
+$yellow-000: #fffdef !default;
+$yellow-100: #fffbdd !default;
+$yellow-200: #fff5b1 !default;
+$yellow-300: #ffea7f !default;
+$yellow-400: #ffdf5d !default;
+$yellow-500: #ffd33d !default;
+$yellow-600: #f9c513 !default;
+$yellow-700: #dbab09 !default;
+$yellow-800: #b08800 !default;
+$yellow-900: #735c0f !default;
 
 // -------- Orange --------
-$orange-000: #fff8f2;
-$orange-100: #ffebda;
-$orange-200: #ffd1ac;
-$orange-300: #ffab70;
-$orange-400: #fb8532;
-$orange-500: #f66a0a; // Default. passes AA Large with #fff
-$orange-600: #e36209;
-$orange-700: #d15704;
-$orange-800: #c24e00;
-$orange-900: #a04100;
+$orange-000: #fff8f2 !default;
+$orange-100: #ffebda !default;
+$orange-200: #ffd1ac !default;
+$orange-300: #ffab70 !default;
+$orange-400: #fb8532 !default;
+$orange-500: #f66a0a !default; // Default. passes AA Large with #fff
+$orange-600: #e36209 !default;
+$orange-700: #d15704 !default;
+$orange-800: #c24e00 !default;
+$orange-900: #a04100 !default;
 
 // -------- Red --------
-$red-000: #ffeef0;
-$red-100: #ffdce0;
-$red-200: #fdaeb7;
-$red-300: #f97583;
-$red-400: #ea4a5a;
-$red-500: #d73a49; // Default. passes AA
-$red-600: #cb2431;
-$red-700: #b31d28;
-$red-800: #9e1c23;
-$red-900: #86181d;
+$red-000: #ffeef0 !default;
+$red-100: #ffdce0 !default;
+$red-200: #fdaeb7 !default;
+$red-300: #f97583 !default;
+$red-400: #ea4a5a !default;
+$red-500: #d73a49 !default; // Default. passes AA
+$red-600: #cb2431 !default;
+$red-700: #b31d28 !default;
+$red-800: #9e1c23 !default;
+$red-900: #86181d !default;
 
 // -------- Purple --------
-$purple-000: #f5f0ff;
-$purple-100: #e6dcfd;
-$purple-200: #d1bcf9;
-$purple-300: #b392f0;
-$purple-400: #8a63d2;
-$purple-500: #6f42c1; // passes AA with #fff
-$purple-600: #5a32a3;
-$purple-700: #4c2889;
-$purple-800: #3a1d6e;
-$purple-900: #29134e;
+$purple-000: #f5f0ff !default;
+$purple-100: #e6dcfd !default;
+$purple-200: #d1bcf9 !default;
+$purple-300: #b392f0 !default;
+$purple-400: #8a63d2 !default;
+$purple-500: #6f42c1 !default; // passes AA with #fff
+$purple-600: #5a32a3 !default;
+$purple-700: #4c2889 !default;
+$purple-800: #3a1d6e !default;
+$purple-900: #29134e !default;
 
 // -------- Pink --------
-$pink-000: #ffeef8;
-$pink-100: #fedbf0;
-$pink-200: #f9b3dd;
-$pink-300: #f692ce;
-$pink-400: #ec6cb9;
-$pink-500: #ea4aaa;
-$pink-600: #d03592;
-$pink-700: #b93a86;
-$pink-800: #99306f;
-$pink-900: #6d224f;
+$pink-000: #ffeef8 !default;
+$pink-100: #fedbf0 !default;
+$pink-200: #f9b3dd !default;
+$pink-300: #f692ce !default;
+$pink-400: #ec6cb9 !default;
+$pink-500: #ea4aaa !default;
+$pink-600: #d03592 !default;
+$pink-700: #b93a86 !default;
+$pink-800: #99306f !default;
+$pink-900: #6d224f !default;
 
 // -------- Fades --------
 $black-fade-15: rgba($black, 0.15);
